--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 
 /****** basic ******/
 html, body { height:100%; }
-body { margin:0; padding:0; font-family:'Noto Sans KR','Apple SD Gothic Neo',sans-serif; font-weight:400; letter-spacing:-1px; }
+body { margin:0; padding:0; font-family:'Noto Sans KR','Apple SD Gothic Neo',sans-serif; font-weight:400; letter-spacing:-1px; overflow-x:hidden;}
 ul, li { list-style:none; margin:0; padding:0; }
 a { display:block; text-decoration:none; }
 
@@ -108,55 +108,63 @@ a { display:block; text-decoration:none; }
             /** info title 1 **/
             .container .main #info .info_title1 { width:100%; height:100vh; padding:0 130px; box-sizing:border-box; font-size:14em; display:flex; flex-direction:column; justify-content:center; font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; font-weight:900; }
                 .container .main #info .info_title1 span { display:block; }
-                
+
+
+            /** info container **/
+            .container .main #info .info_container { position:relative; width:100%; min-height:100vh; }
+                .container .main #info .info_container .space_holder { position:relative; width:100%; }
+                    .container .main #info .info_container .space_holder .sticky { position:sticky; top:0; height:100vh; width:100%; overflow-x:hidden; }
+                        .container .main #info .info_container .space_holder .sticky .horizontal { position:absolute; height:100%; will-change:transform; }
+                            .container .main #info .info_container .space_holder .sticky .horizontal .cards { position:relative; height:100%; display:flex; flex-flow:row nowrap; justify-content:space-between; align-items:center; }
+
 
             /** info txt **/
-            .container .main #info .info_txt { width:100%; height:100vh; position:relative; font-weight:700; }
-                .container .main #info .info_txt .txt1 { position:absolute; top:50%; right:50%; transform:translateY(-50%); z-index:2; }
-                    .container .main #info .info_txt .txt1 > p { font-size:4em; letter-spacing:-3px; margin:0 70px 0 0; }
+            .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_txt { font-weight:700; position: relative; height:100vh; width:100vw; margin-right: 75px; flex-shrink: 0; }
+                .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_txt .txt1 { position:absolute; top:50%; right:50%; transform:translateY(-50%); z-index:2; }
+                    .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_txt .txt1 > p { font-size:4em; letter-spacing:-3px; margin:0 70px 0 0; }
                     
-                    .container .main #info .info_txt .txt1 .more { margin-top:20px; display:flex; align-items:center; font-size:1.1em; font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; font-weight:500; cursor:pointer; }
-                            .container .main #info .info_txt .txt1 .more .circle { width:15px; height:15px; border-radius:50%; background-color:#ffe71b; margin:0 25px 0 10px; cursor:pointer; }
+                    .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_txt .txt1 .more { margin-top:20px; display:flex; align-items:center; font-size:1.1em; font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; font-weight:500; cursor:pointer; }
+                            .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_txt .txt1 .more .circle { width:15px; height:15px; border-radius:50%; background-color:#ffe71b; margin:0 25px 0 10px; cursor:pointer; }
 
-                .container .main #info .info_txt .txt2 { font-size:1.5em; position:absolute; top:60%; right:25%; z-index:2; }
-                    .container .main #info .info_txt .txt2 span { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; }
+                .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_txt .txt2 { font-size:1.5em; position:absolute; top:60%; right:25%; z-index:2; }
+                    .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_txt .txt2 span { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; }
 
             /** info article **/
-            .container .main #info .info_article { width:860px; height:100vh; padding:120px 60px; box-sizing:border-box; display:flex; flex-direction:column; position:relative; z-index:2; }
-                .container .main #info .artwork { background-color:rgba(255, 204, 71, 0.6); }
-                .container .main #info .collab { background-color:rgba(255, 67, 81, 0.6); }
-                .container .main #info .fashion { background-color:rgba(46, 167, 215, 0.6); }
+            .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article { width:860px; height:100vh; padding:120px 60px; box-sizing:border-box; display:flex; flex-direction:column; margin-right:75px; flex-shrink:0; position:relative; z-index:2; }
+                .container .main #info .info_container .space_holder .sticky .horizontal .cards .artwork { background-color:rgba(255, 204, 71, 0.6); }
+                .container .main #info .info_container .space_holder .sticky .horizontal .cards .collab { background-color:rgba(255, 67, 81, 0.6); }
+                .container .main #info .info_container .space_holder .sticky .horizontal .cards .fashion { background-color:rgba(46, 167, 215, 0.6); }
 
-                .container .main #info .info_article .article_txt1 { display:flex; justify-content:flex-start; }
-                    .container .main #info .info_article .article_txt1 p { margin:0; font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; }
-                        .container .main #info .info_article .article_txt1 p:first-of-type { font-size:2.8em; font-weight:800; }
-                        .container .main #info .info_article .article_txt1 p:last-of-type { margin-left:10px; font-size:1.3em; }
+                .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article .article_txt1 { display:flex; justify-content:flex-start; }
+                    .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article .article_txt1 p { margin:0; font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; }
+                        .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article .article_txt1 p:first-of-type { font-size:2.8em; font-weight:800; }
+                        .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article .article_txt1 p:last-of-type { margin-left:10px; font-size:1.3em; }
 
                 
-                .container .main #info .info_article .article_txt2 { margin-top:auto; }
-                    .container .main #info .info_article .article_txt2 > p { margin:0 0 40px 0; padding-bottom:10px; border-bottom:1px solid #fff; font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; font-weight:600; font-size:1.1em; }
-                    .container .main #info .info_article .article_txt2 > div strong { font-size:1.7em; font-weight:500; }
-                            .container .main #info .info_article .article_txt2 > div strong span { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; }
-                    .container .main #info .info_article .article_txt2 > div p { margin:0; font-size:1.3em; font-weight:400; margin-top:15px; }
-                        .container .main #info .info_article .article_txt2 > div p span { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; }
+                .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article .article_txt2 { margin-top:auto; }
+                    .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article .article_txt2 > p { margin:0 0 40px 0; padding-bottom:10px; border-bottom:1px solid #fff; font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; font-weight:600; font-size:1.1em; }
+                    .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article .article_txt2 > div strong { font-size:1.7em; font-weight:500; }
+                            .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article .article_txt2 > div strong span { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; }
+                    .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article .article_txt2 > div p { margin:0; font-size:1.3em; font-weight:400; margin-top:15px; }
+                        .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article .article_txt2 > div p span { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; }
 
 
-                .container .main #info .info_article .article_txt3 { margin-top:120px; }
-                    .container .main #info .info_article .article_txt3 ul { display:flex; }
-                        .container .main #info .info_article .article_txt3 ul li:first-child { margin-right:200px; }
+                .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article .article_txt3 { margin-top:120px; }
+                    .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article .article_txt3 ul { display:flex; }
+                        .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article .article_txt3 ul li:first-child { margin-right:200px; }
 
-                            .container .main #info .info_article .article_txt3 ul li p { margin:0; }
-                            .container .main #info .info_article .article_txt3 ul li p:first-of-type { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; font-weight:500; margin-bottom:10px; }
+                            .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article .article_txt3 ul li p { margin:0; }
+                            .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_article .article_txt3 ul li p:first-of-type { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; font-weight:500; margin-bottom:10px; }
 
             /** info title 2 **/
-            .container .main #info .info_title2 { width:100%; height:100vh; text-align:center; display:flex; justify-content:center; align-items:center; }
-                .container .main #info .info_title2 .box { width:100%; position:fixed; top:50%; left:50%; transform:translateX(-50%); z-index:-1; transition: 0.5s ease; opacity:0; }
-                .container .main #info .info_title2 .box.ta_da { z-index:1; opacity:1; }
-                    .container .main #info .info_title2 .box p { margin:0; }
-                        .container .main #info .info_title2 .box p:first-of-type { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; font-weight:900; font-size:3.3em; margin-bottom:30px; }
+            .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_title2 { width:100vw; height:100vh; text-align:center; display:flex; justify-content:center; align-items:center; flex-shrink:0; position: relative; }
+                .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_title2 .box { width:100%; z-index:-1; transition:1.5s ease; opacity:0; transform:translateY(50px); }
+                .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_title2 .box.ta_da { z-index:1; opacity:1; transform:translateY(0px); }
+                    .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_title2 .box p { margin:0; }
+                        .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_title2 .box p:first-of-type { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; font-weight:900; font-size:3.3em; margin-bottom:30px; }
             
-                        .container .main #info .info_title2 .box p:last-of-type { font-weight:500; line-height:1.5; font-size:1.7em; }
-                            .container .main #info .info_title2 .box p:last-of-type span { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; }
+                        .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_title2 .box p:last-of-type { font-weight:500; line-height:1.5; font-size:1.7em; }
+                            .container .main #info .info_container .space_holder .sticky .horizontal .cards .info_title2 .box p:last-of-type span { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; }
 
         
         /*** fin ***/
