--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,11 @@ body { margin:0; padding:0; font-family:'Noto Sans KR','Apple SD Gothic Neo',san
 ul, li { list-style:none; margin:0; padding:0; }
 a { display:block; text-decoration:none; }
 
+::selection { background-color:#ff4351; color:#fff; }
+::-moz-selection { background-color:#ff4351; color:#fff; }
+::-webkit-selection { background-color:#ff4351; color:#fff; }
+
+
 /****** container ******/
 .container { width:100%; }
 
