--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,11 @@ a { display:block; text-decoration:none; }
 ::-moz-selection { background-color:#ff4351; color:#fff; }
 ::-webkit-selection { background-color:#ff4351; color:#fff; }
 
+::-webkit-scrollbar { width:10px; background-color:#eee; }
+::-webkit-scrollbar-thumb { background-color:#ff4351; }
+::-webkit-scrollbar-track { background-color:#eee; }
+
+
 
 /****** container ******/
 .container { width:100%; }
