modify index HTML, CSS - #learn_more

--- a/css/index.css
+++ b/css/index.css
@@ -277,4 +277,5 @@ a { display:block; text-decoration:none; }
 
     /***** learn more *****/
     .container #learn_more { width:120px; height:120px; line-height:120px; background-color:#ffe71b; border-radius:50%; text-align:center; font-weight:500; font-size:1.1em; position:fixed; bottom:30px; left:-150px; z-index:2; cursor:pointer; }
+        .container #learn_more a { color:#000; }
     .container #learn_more.hidden { display:none; }
