--- a/css/about.css
+++ b/css/about.css
@@ -79,8 +79,8 @@ a { display:block; text-decoration:none; }
                         .container #main #history .space_holder .sticky .horizontal .cards { position:relative; height:100%; display:flex; flex-flow:row nowrap; justify-content:space-between; align-items:center; }
 
             /* history title */
-            .container #main #history .history_title { width:90vw; /* padding:140px 10%; */ box-sizing:border-box; background:#fff url(../images/about_next.png) no-repeat 95% 47%; background-size:80px; display:flex; flex-direction:column; justify-content:space-between; transition:0.2s; }
-            .container #main #history .history_title.active { background:#eee url(../images/about_next.png) no-repeat 95% 47%; background-size:80px; }
+            .container #main #history .history_title { width:95vw; margin-right:10%; padding:120px 4%; box-sizing:border-box; background:#fff url(../images/about_next.png) no-repeat 90% 47%; background-size:80px; display:flex; flex-direction:column; justify-content:space-between; transition:0.2s; }
+            .container #main #history .history_title.active { background:#eee url(../images/about_next.png) no-repeat 90% 47%; background-size:80px; }
                 .container #main #history .history_title .txt h2 { font-size:6.25vw; margin:0; transition:0.2s; }
                 .container #main #history .history_title.active .txt h2 { color:#fff; text-shadow:0 0 10px rgba(0, 0, 0, 0.1); }
                 .container #main #history .history_title .txt > p { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; color:#565656; font-weight:400; margin:10px 0 0 10px; }
@@ -91,8 +91,9 @@ a { display:block; text-decoration:none; }
                         .container #main #history .history_title .footprint p span { font-weight:500; }
 
             /* history box */
-            .container #main #history .history_box { width:410px; }
-                .container #main #history .history_box h3 { margin:0; }
+            .container #main #history .history_box { width:410px; margin-right:30px; padding:100px 1%; box-sizing:border-box; color:#fff; display:flex; flex-direction:column; justify-content:space-between; }
+            .container #main #history .history_box:last-of-type { margin-right:15px; }
+                .container #main #history .history_box h3 { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; font-size:3.5vw; margin:0; }
 
             .container #main #history .box1 { background-color:rgba(255, 204, 71, 0.5); }
             .container #main #history .box2 { background-color:rgba(255, 67, 81, 0.5); }
