--- a/css/about.css
+++ b/css/about.css
@@ -95,6 +95,11 @@ a { display:block; text-decoration:none; }
             .container #main #history .history_box:last-of-type { margin-right:15px; }
                 .container #main #history .history_box h3 { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; font-size:3.5vw; margin:0; }
 
+                .container #main #history .history_box ul li { font-size:1.1em; margin-bottom:50px; }
+                .container #main #history .history_box ul li:last-child { margin-bottom:0; }
+                    .container #main #history .history_box ul li p:first-of-type { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; font-weight:800; font-size:1.2em; }
+                        .container #main #history .history_box ul li p span { font-family:'Raleway', "Helvetica Neue","Apple SD Gothic Neo",sans-serif; }
+
             .container #main #history .box1 { background-color:rgba(255, 204, 71, 0.5); }
             .container #main #history .box2 { background-color:rgba(255, 67, 81, 0.5); }
             .container #main #history .box3 { background-color:rgba(46, 167, 215); }
